# dockipy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/dockipy/: __about__.py  __init__.py  dockibook.py  dockinotebook.py  dockipy.py  dockishell.py  envibook.py  envipy.py  main.py  utils.py
tests/: init_test.py
