[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "dockipy"
dynamic = ["version", "dependencies"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "apache-2.0"
keywords = []
authors = [
  { name = "Arturas Aleksandraus", email = "arturas@aleksandraus.se" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
Documentation = "https://github.com/Arty-Facts/dockipy#readme"
Issues = "https://github.com/Arty-Facts/dockipy/issues"
Source = "https://github.com/Arty-Facts/dockipy"

[tool.hatch.version]
path = "src/dockipy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dockipy tests}"

[tool.coverage.run]
source_pkgs = ["dockipy", "tests"]
branch = true
parallel = true
omit = [
  "src/dockipy/__about__.py",
]

[tool.coverage.paths]
dockipy = ["src/dockipy", "*/dockipy/src/dockipy"]
tests = ["tests", "*/dockipy/tests"]

[project.scripts]
dockipy = "dockipy.dockipy:dockipy"
dockishell = "dockipy.dockishell:dockishell"
dockibook = "dockipy.dockibook:dockibook"
dockikill = "dockipy.utils:dockikill"
dockistop = "dockipy.utils:dockistop"
docki = "dockipy.utils:docki"
envipy = "dockipy.envipy:envipy"
envibook = "dockipy.envibook:envibook"
dockiprune = "dockipy.utils:dockiprune"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
